--- a/grafana/docker-compose.yaml
+++ b/grafana/docker-compose.yaml
@@ -12,13 +12,21 @@ services:
     networks:
       - grafana
 
-  promtail:
-    image: grafana/promtail:2.8.0
+#  promtail:
+#    image: grafana/promtail:2.8.0
+#    volumes:
+#      - /var/log:/var/log
+#      - ./promtail-config.yaml:/etc/promtail/config.yml
+#    command: -config.file=/etc/promtail/config.yml
+#    networks:
+#      - grafana
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - "9090:9090"
     volumes:
-      - /var/log:/var/log
-    command: -config.file=/etc/promtail/config.yml
-    networks:
-      - grafana
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
   tempo:
     image: grafana/tempo:latest
     command: [ "-config.file=/etc/tempo.yaml" ]
@@ -92,5 +100,6 @@ services:
       - grafana
     depends_on:
       - loki
-      - promtail
+      #- promtail
+      - prometheus
       - tempo
